MODEMAIL-112 Implement Settings API
- Settings API is implemented for storing locally mod-email settings
- only acceptable key is 'smtp-configuration' for setting
- added verification that value for this setting is correct
- unit tests are added for the new code
- integration tests are added